<resources>

    <string name="accelerometer">Accelerometer</string>
    <string name="z_position">Z-POSITION:</string>
    <string name="x_position">X-POSITION:</string>
    <string name="y_position">Y-POSITION:</string>
    <string name="flip_the_phone_and_see_what_happens">TILT THE PHONE AND SEE WHAT HAPPENS!</string>
    <string name="hello_sensor1">HELLO SENSOR!</string>
    <string name="_0">0°</string>
    <string name="welcome_to_the_compass">WELCOME TO THE COMPASS</string>
    <string name="compass">Compass</string>
    <string name="welcome_to_the_accelerometer">WELCOME TO THE ACCELEROMETER</string>
    <string name="pick_a_sensor">PICK A SENSOR</string>

</resources>
